2024-09-26  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-menu.el (howm-menu-mode, howm-menu-refresh-note):
	add hint to prevent typical misuse of menu
	thx > @termitereform san
	https://github.com/kaorahi/howm/issues/18

	* howm-lang-en.el: ditto.

	* howm-lang-fr.el: ditto.

	* howm-lang-ja.el: ditto.

	* howm-menu-en.el: ditto.

	* howm-menu-fr.el: ditto.

	* howm-menu-ja.el: ditto.

2024-09-22  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* action-lock.el (action-lock-mode):
	fix unintended "M-x ..." in describe-mode
	thx > Chris Gerber san (chris at theGerb.com)
	https://github.com/kaorahi/howm/pull/16

	* howm-menu.el (howm-menu-mode): ditto.

	* howm-mode.el (howm-mode): ditto.

	* howm-reminder.el (howm-simulate-todo-mode): ditto.

	* howm-view.el
	(howm-view-summary-mode, howm-view-contents-mode): ditto.

	* illusion.el (illusion-mode): ditto.

	* riffle.el
	(riffle-sample-summary-mode, riffle-sample-contents-mode): ditto.

	* howm-mode.el (howm-mode): fix wrong docstring

	* action-lock.el (action-lock-mode): ditto.

	* illusion.el (illusion-mode): ditto.

	* howm-reminder.el (howm-simulate-todo-mode):
	disable unused action-lock-mode in howm-simulate-todo

	* action-lock.el (action-lock-mode): fix typo in docstring

2024-09-21  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* howm-view.el (howm-view-summary-mode, howm-view-contents-mode):
	fix unintended "M-x ..." for "Quit" in describe-mode

2024-09-20  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* riffle.el: fix broken back-scrolling by BS key in terminals

	* howm-menu.el: ditto

2024-09-19  HIRAOKA Kazuyuki  <kakkokakko@gmail.com>

	* riffle.el: remove obsolete C-h binding

	* howm-menu.el: ditto

	* howm-misc.el
	(howm-set-lang): sample/bug-report.txt is UTF-8 now
	(howm-setup-change-log): avoid Japanese comment

	* howm-misc.el (howm-setup-change-log): avoid obsolete find-if

	* README.md: add screenshot by @jabirali
	thx > Jabir Ali Ouassou san (jabir.ali.ouassou at hvl.no)